[package]
name = "bevy_show_prepass"
description = "A Bevy plugin to visualize depth, normal and motion vector prepasses."
version = "0.1.0"
edition = "2021"
authors = ["Jannik Obermann <jannik.obermann@gmail.com>"]
repository = "https://github.com/jannik4/bevy_show_prepass"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.17.2", default-features = false, features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_asset",
    "bevy_log",
] }

[dev-dependencies]
bevy = { version = "0.17.2", features = ["embedded_watcher"] }

[[example]]
name = "simple"
