[package]
name = "bevy_show_prepass"
description = "A Bevy plugin to visualize depth, normal and motion vector prepasses."
version = "0.1.1"
edition = "2021"
authors = ["Jannik Obermann <jannik.obermann@gmail.com>"]
repository = "https://github.com/jannik4/bevy_show_prepass"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_asset",
    "bevy_log",
] }

[dev-dependencies]
bevy = "0.18.0"

# To run with shader hot reloading: cargo run --example simple --features bevy/embedded_watcher
[[example]]
name = "simple"
